fdo#79597 Password UI: correct typo for 1 character

Display a different string in case of 1 character for minimum length

Change-Id: Iba2fbbb7d4101718def7c79ce5354debf5d97041
Reviewed-on: https://gerrit.libreoffice.org/9631
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>